k8s/app/templates/prometheus/prometheus-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus 
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          imagePullPolicy: IfNotPresent
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - name: web
              containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus   
            - name: alert-rule-volume
              mountPath: /etc/rules
              
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prom-config
        - name: alert-rule-volume
          configMap:
            defaultMode: 420
            name: node-alert
